2013-07-08  Kenichi Handa  <handa@gnu.org>

	* automated/decoder-tests.el (decoder-tests-prefer-utf-8-read):
	Use with-ccoding-priority to avoid side-effect (Bug#14781).

2013-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* automated/file-notify-tests.el
	(file-notify-test-remote-temporary-file-directory): Use
	`null-device' on w32.
	(file-notify--test-tmpfile, file-notify--test-tmpfile1)
	(file-notify--test-results, file-notify--test-event)
	(file-notify--deftest-remote, file-notify--event-test)
	(file-notify--test-event-handler)
	(file-notify--test-make-temp-name): Renamed, in order to mark them
	internal.
	(tramp-message-show-message, tramp-read-passwd): Tweak them for
	better fitting in noninteractive tests.
	(file-notify-test00-availability): Renamed from `file-notify-test0'.
	(file-notify-test01-add-watch): Renamed from `file-notify-test1'.
	Use `temporary-file-directory '.
	(file-notify-test01-add-watch-remote): New test.
	(file-notify-test02-events): Renamed from `file-notify-test2'.
	(file-notify-test02-events-remote): Renamed from `file-notify-test3'.
	(file-notify-test03-autorevert): Renamed from
	`file-notify-test4'.  Use timeouts.
	(file-notify-test03-autorevert-remote): Renamed from
	`file-notify-test5'.

2013-07-04  Michael Albinus  <michael.albinus@gmx.de>

	* automated/file-notify-tests.el: New package.

2013-06-28  Kenichi Handa  <handa@gnu.org>

	* automated/decoder-tests.el (decoder-tests-gen-file): New arg FILE.
	(decoder-tests-ao-gen-file): Renamed from decoder-tests-filename.
	Callers changed.
	(decoder-tests-filename): New function.
	(decoder-tests-prefer-utf-8-read)
	(decoder-tests-prefer-utf-8-write): New function.
	(ert-test-decoder-prefer-utf-8): New test.

2013-06-27  Dmitry Gutov  <dgutov@yandex.ru>

	* automated/package-x-test.el: Change the commentary.
	(package-x-test--single-archive-entry-1-3)
	(package-x-test--single-archive-entry-1-4): Fix the tests, by
	using the appropriate data structure.
