@@ -1,3 +1,10 @@
+2013-07-09  Glenn Morris  <rgm@gnu.org>
+
+	* automated/add-log-tests.el, automated/advice-tests.el:
+	* automated/imenu-test.el, automated/python-tests.el:
+	* automated/ruby-mode-tests.el, automated/xml-parse-tests.el:
+	Explictly require ert.
+
 2013-07-08  Kenichi Handa  <handa@gnu.org>
 
 	* automated/decoder-tests.el (decoder-tests-prefer-utf-8-read):
